# Hyperion-Browser

./: .gitignore  CHANGELOG_build_phases11to20_41to50.md  CMakeLists.txt  DOCS.md  DRAFT_PR.md  HyperionSetup.nsi  LICENSE.txt  MODULE1_COMPLETION_SUMMARY.md  NEXT_STEPS.md  README.md  ROADMAP.md  ROADMAP_CHROME_EXTENSIONS.md  ROADMAP_PHASE2_USER_FEATURES.md  ROADMAP_TO_RIVAL_CHROMIUM.md  WORK.md  build_css_parser.py  build_css_test.ps1  errors.txt  final.md  phaseb.md  txt.txt  ui.md
HyperionJS/: CMakeLists.txt
HyperionJS/src/: collections.cpp  dom_bridge.cpp  main.cpp  primitives.cpp  stdlib.cpp
HyperionJS/src/core/: value.cpp
HyperionJS/src/debug/: profiler.cpp
HyperionJS/src/gc/: gc.cpp
HyperionJS/src/lexer/: lexer.cpp  token.cpp
HyperionJS/src/parser/: ast.cpp  parser.cpp
HyperionJS/src/runtime/: array_buffer.cpp  bridge.cpp  environment.cpp  extensions.cpp  object.cpp  promise.cpp  regexp.cpp  stdlib.cpp
HyperionJS/src/stdlib/: date.cpp
HyperionJS/src/vm/: bytecode.cpp  compiler.cpp  hidden_class.cpp  inline_cache.cpp  jit_baseline.cpp  vm.cpp
HyperionJS/src/wasm/: wasm_module.cpp  wasm_multi_value.cpp  wasm_table.cpp
benchmarks/: fib.js  (+2 more)
browser/: CMakeLists.txt
browser/src/: application.cpp  tab.cpp  tab_manager.cpp
browser/ui/: devtools.html
engine/: CMakeLists.txt  MODULE1_COMPLETE.md
engine/asm/: base64_simd.asm  hash_simd.asm  mem_ops.asm  stack_walk_x64.asm  utf8_validate.asm  yuv_to_rgb_sse.asm
engine/examples/: layout_example.cpp
engine/src/: CMakeLists.txt
engine/src/benchmark/: benchmark.cpp
engine/src/config/: config.cpp
engine/src/core/: integration_test.cpp
engine/src/css/: calc_engine.cpp  color.cpp  containment.cpp  css_filters.cpp  css_parser.cpp  rust_css_parser.cpp  selector_ext.cpp  style_engine.cpp
engine/src/devtools/: devtools_cdp.cpp  devtools_server.cpp
engine/src/dom/: a11y_tree.cpp  canvas_element.cpp  event_target.cpp  events.cpp  node.cpp
engine/src/extensions/: extension_manager.cpp
engine/src/fuzzing/: fuzzing.cpp
engine/src/graphics/: clip_mask.cpp  matrix4x4.cpp  webgpu.cpp
engine/src/image/: image_decoder.cpp  image_formats.cpp
engine/src/ipc/: ipc_channel.cpp
engine/src/layout/: animation_controller.cpp  block_layout.cpp  box_model.cpp  flexbox_engine.cpp  grid_engine.cpp  incremental_layout.cpp  inline_layout.cpp  layout_engine.cpp  layout_flex_ext.cpp  layout_grid_ext.cpp  overflow_engine.cpp  positioning_engine.cpp  replaced_engine.cpp  table_engine.cpp
engine/src/mathml/: mathml_renderer.cpp
engine/src/media/: audio_context.cpp  audio_renderer_wasapi.cpp  decoder_aac.c  decoder_h264.c  decoder_hevc.c  decoder_mp3.c  decoder_opus.c  decoder_vp9.c  demux_mp4.c  demux_webm.c  eme_engine.cpp  idct_sse2.asm  mc_avx2.asm  mdct_avx.asm  media_source_ext.cpp  media_sync_abr.cpp  video_decoder.cpp  webaudio_nodes.cpp  webcodecs_enc.cpp
engine/src/memory/: memory_pool.cpp  pool_allocator_slab.cpp
engine/src/net/: cookie_manager.cpp  cors.cpp  dns_cache.cpp  fetch.cpp  happy_eyeballs.cpp  http_cache.cpp  lru_cache.cpp  mime_type.cpp  net_metrics.cpp  network_manager.cpp  request.cpp  resource_hints.cpp  response_cache.cpp  security_policies.cpp  ssl_socket.cpp  tls_session_cache.cpp  webrtc_peer.cpp  websocket.cpp  ws_deflate.cpp  xss_filter.cpp
engine/src/parser/: html_parser.cpp  html_tokenizer_bridge.cpp
engine/src/process/: process_manager.cpp
engine/src/render/: animation_controller.cpp  canvas_2d.cpp  compositor.cpp  display_list.cpp  gpu_texture.cpp  image_loader.cpp  painter.cpp  parallel_paint.cpp  profile_guided.cpp  render_command.cpp  scroll_controller.cpp  text_render.cpp  video_renderer_d3d.cpp
engine/src/sandbox/: sandbox.cpp  sandbox_policy.cpp  syscall_filter.c
engine/src/script/: fetch_api.cpp  fetch_ext.cpp  indexeddb_api.cpp  json_api.cpp  script_engine.cpp  storage_api.cpp  streams.cpp  websocket_api.cpp  xml_http_request.cpp
engine/src/security/: cors_checker.cpp  csp.cpp  csp_enforcer_impl.cpp  secure_context.cpp  site_isolation.cpp  xss_filter.cpp
engine/src/services/: background_sync.cpp  push_api.cpp  service_worker.cpp  service_worker_container.cpp  service_worker_registration.cpp
engine/src/simd/: simd_ops.cpp
engine/src/storage/: cache_api.cpp  cache_api_ext.cpp  file_system.cpp  indexeddb.cpp  indexeddb_impl.cpp  local_storage.cpp  quota_manager.cpp  session_storage.cpp
engine/src/style/: style_engine.cpp
engine/src/svg/: svg_renderer.cpp
engine/src/test/: test_suite.cpp
engine/src/text/: font_engine.cpp  text_shaping.cpp  variable_fonts.cpp
engine/src/threading/: thread_pool.cpp
engine/src/webgl/: webgl_context.cpp  webgl_context_ext.cpp
engine/tests/: animation_controller_test.cpp  css_parser_test.cpp  display_list_test.cpp  flexbox_engine_test.cpp  font_engine_test.cpp  grid_engine_test.cpp  layout_engine_test.cpp  overflow_engine_test.cpp  positioning_engine_test.cpp  replaced_engine_test.cpp  scroll_controller_test.cpp  table_engine_test.cpp  text_render_test.cpp
hyperion_css_parser/: Cargo.toml
hyperion_css_parser/src/: lib.rs
hyperion_html_tokenizer/: Cargo.toml
hyperion_html_tokenizer/src/: lib.rs  main.rs
hyperion_html_tokenizer/src/diagnostics/: mod.rs
hyperion_html_tokenizer/src/ffi/: mod.rs
hyperion_html_tokenizer/src/input/: mod.rs
hyperion_html_tokenizer/src/states/: mod.rs
hyperion_html_tokenizer/src/tests/: mod.rs
hyperion_html_tokenizer/src/tokenizer/: mod.rs
hyperion_parser/: Cargo.toml
hyperion_parser/src/: lib.rs
platform/: CMakeLists.txt
platform/src/: logging.cpp  process_manager.cpp  window.cpp
renderer/: CMakeLists.txt
renderer/src/: main.cpp
src/network/: CMakeLists.txt
testing/: CMakeLists.txt
ui/: CMakeLists.txt
ui/src/: accessibility_handler.cpp  ai_client.cpp  ai_sidebar.cpp  bookmarks_bar.cpp  component.cpp  dpi_manager.cpp  dwrite_helpers.cpp  google_instant.cpp  modern_bookmarks_bar.cpp  new_tab_dashboard.cpp  omnibox.cpp  renderer.cpp  tab_renderer.cpp  theme_manager.cpp  title_bar.cpp  toolbar.cpp  vector_icon.cpp  weather_widget.cpp  window_chrome.cpp
(+254 files in other folders)
